# ai-trainer-backend

./: Dockerfile  README.md  pyproject.toml
app/: config.py  main.py
app/data_types/: __init__.py  data_types.py
app/routers/message/: __init__.py  message.py  service.py
app/schemas/: __init__.py  message.py  model_service.py
app/schemas/message/: __init__.py  message.py  message_builder.py
app/schemas/model_service/: __init__.py  model_service.py
app/services/ai_model/: __init__.py  model_service.py  service.py
app/services/ai_model/open_ai/: __init__.py  message_builder.py  model_service.py
app/services/chatbot/: __init__.py  service.py
app/services/feedback_generation/: __init__.py  service.py
app/services/text_generation/: __init__.py  model_config.py  model_service.py
docs/: DEMO_chat_sequence_diagram.drawio
examples/: example_input_message_feedback.json  example_input_message_generate.json  example_long.json
