[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["JakubTomaszewski <jakub.k.tomaszewski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
requests = "^2.31.0"
poetry-dotenv-plugin = "^0.2.0"
openai = "^1.3.7"
pydantic-settings = "^2.1.0"


[tool.poetry.scripts]
launch_app = "main:launch_app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
